[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/title-screen/Buttons/NewGameButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sound/Music/01.2_LOOP_The_Sword_and_the_Heart_by_Florian_Stracker.wav" type="AudioStream" id=2]
[ext_resource path="res://Scenes/title-screen/Buttons/ControlsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/NPCs/Archer/Archer_Idle_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/NPCs/Archer/Archer_Idle_4.png" type="Texture" id=5]
[ext_resource path="res://Assets/NPCs/Archer/Archer_Idle_2.png" type="Texture" id=6]
[ext_resource path="res://Scenes/title-screen/title_screen.gd" type="Script" id=7]
[ext_resource path="res://Assets/NPCs/Archer/Archer_Idle_1.png" type="Texture" id=8]
[ext_resource path="res://Scenes/title-screen/Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scenes/title-screen/Buttons/LoadGameButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/title-screen/fade_in/FadeIn.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/title-screen/Buttons/QuitGameButton.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Scenes/title-screen/Fonts/Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = SubResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 9 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0

[node name="Label" type="Label" parent="Menu"]
margin_right = 1040.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "MERLIN"

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 127.0
margin_right = 1040.0
margin_bottom = 491.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 518.0
margin_bottom = 364.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGame2" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
margin_top = 32.0
margin_right = 518.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 18, -145 )
scene_to_load = "res://Scenes/Intro.tscn"

[node name="Load Game" parent="Menu/CenterRow/Buttons" instance=ExtResource( 10 )]
margin_top = 112.0
margin_right = 518.0
margin_bottom = 172.0

[node name="ControlsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 192.0
margin_right = 518.0
margin_bottom = 252.0
scene_to_load = "res://Scenes/title-screen/Controls.tscn"

[node name="Quit Game" parent="Menu/CenterRow/Buttons" instance=ExtResource( 12 )]
margin_top = 272.0
margin_right = 518.0
margin_bottom = 332.0
scene_to_load = ""

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 364.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="Menu/CenterRow/CenterContainer"]
position = Vector2( 443.353, 156.679 )
scale = Vector2( 10, 10 )
frames = SubResource( 3 )
animation = "Idle"
frame = 3
playing = true

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 495.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
text = "Pre-Alpha Version 0.1
Merlin Studios"

[node name="FadeIn" parent="." instance=ExtResource( 11 )]
visible = false

[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGame2" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Load Game" to="." method="_on_Load_Game_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Quit Game" to="." method="_on_QuitGame_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
